# price_snooper

./: .gitignore  pyproject.toml
price_snooper/: main.py
price_snooper/app/: product_service.py
price_snooper/app/dao/: price_history_dao.py  product_dao.py
price_snooper/app/model/: pricehistory.py  product.py
price_snooper/app/utils/: constants.py  currency.py  db_utils.py  request_utils.py
price_snooper/commands/: watch_product.py
price_snooper/sql/: init_schema.sql
